# onchain-agent-template

./: .env.example  Cargo.toml  README.md
assets/: personality.json
migrations/: 20250816175200_create_messages.sql
src/: anthropic.rs  db.rs  main.rs  personality.rs  tools.rs
