[package]
name = "onchain-agent-template"
version = "0.1.0"
edition = "2024"
default-run = "onchain-agent-template"

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
dotenv = "0.15"
anyhow = "1"
# Ethereum dependencies
ethers = { version = "2.0", features = ["rustls"] }
rand = "0.8"
hex = "0.4"
lazy_static = "1.4"
regex = "1.10.2"

